# tax

./: .gitignore  GETTING_STARTED.md  README.md  REPO_README.md  SPEC_DRIFT_ANALYSIS.md  VERIFICATION_CHECKLIST.md  VERIFY_SELF_CONTAINED.md  docker-compose.yml  handoffkit.config.json  package-lock.json  package.json  pyproject.toml
.github/agents/: architect.agent.md  coder.agent.md  polish.agent.md  qa.agent.md  reviewer.agent.md
docs/: AGENT_SESSION_PROTOCOL.md  MCP_LOCAL_DESIGN.md  NOW.md  PERSISTENT_AGENT_WORKFLOW.md  PHASE_5_SPEC.md  PROJECT_CONTEXT.md  Repo_Structure.md  SESSION_NOTES.md  dif.md  spec.md  ui.md
docs/references/: sa-forms-2025-boxes-first-pass.json  sa-forms-2025-boxes-first-pass.md  sa-forms-2025-redacted.txt
handoffkit/: __main__.py
handoffkit/templates/: architect.md  coder.md  polish.md  qa_tester.md  reviewer.md
src/: extension.ts
web/: DEPLOYMENT.md  Dockerfile  Dockerfile.dev  ENCRYPTION_SETUP.md  Gemfile  PHASE_4_IMPLEMENTATION.md  PHASE_5A_README.md  PHASE_5D_MIGRATION_STATUS.md  README.md  TESTING_PHASE_4.md  TEST_QUICK_START.md
web/.github/workflows/: ci.yml
web/app/controllers/: application_controller.rb  boxes_controller.rb  calculations_controller.rb  evidences_controller.rb  exports_controller.rb  extraction_runs_controller.rb  field_values_controller.rb  gift_aid_donations_controller.rb  income_sources_controller.rb  pension_contributions_controller.rb  sessions_controller.rb  tax_returns_controller.rb  (+4 more)
web/config/: application.rb  credentials.yml.enc  routes.rb  storage.yml
web/db/: schema.rb  seeds.rb
(+158 files in other folders)
