[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "handoffkit"
version = "0.1.0"
description = "Universal (LLM-agnostic) handoff prompt builder"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}

[project.scripts]
handoffkit = "handoffkit.__main__:main"

[tool.setuptools]
packages = ["handoffkit"]

[tool.setuptools.package-data]
handoffkit = ["templates/*.md", "handoffkit.config.json"]
